[metadata]
name = buildmc
version = 0.7.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Pure-Python build ochestrator using CMake or Meson to configure+build via a single simple command.
url = https://github.com/scivision/buildmc
keywords =
  cmake
  meson
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Build Tools
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  build.py
install_requires =


[options.extras_require]
tests =
  pytest >= 3.9
  pytest-timeout
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  buildmc = build:main
