cmake_minimum_required(VERSION 3.0)
project(CMakeAPIdemo LANGUAGES NONE)
enable_testing()

include(CheckLanguage)

check_language(C)
if(CMAKE_C_COMPILER)
  enable_language(C)
  add_executable(minimal_c minimal.c)
  add_test(NAME Minimal_C COMMAND minimal_c)
endif()

check_language(CXX)
if(CMAKE_CXX_COMPILER)
  enable_language(CXX)
  add_executable(minimal_cxx minimal.cxx)
  add_test(NAME Minimal_CXX COMMAND minimal_cxx)
endif()

check_language(Fortran)
if(CMAKE_Fortran_COMPILER)
  enable_language(Fortran)
  add_executable(minimal_fortran minimal.f90)
  add_test(NAME Minimal_Fortran COMMAND minimal_fortran)
endif()